--- a/index.html
+++ b/index.html
@@ -18,51 +18,51 @@
     <link rel="manifest" href="./manifest.json" />
     <link
       rel="preload"
-      href="_next/static/css/fa1d6ecccf8affeb.css"
+      href="./static/css/fa1d6ecccf8affeb.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="_next/static/css/fa1d6ecccf8affeb.css"
+      href="./static/css/fa1d6ecccf8affeb.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
     <script
       defer=""
       nomodule=""
-      src="_next/static/chunks/polyfills-5cd94c89d3acac5f.js"
+      src="./static/chunks/polyfills-5cd94c89d3acac5f.js"
     ></script>
     <script
-      src="_next/static/chunks/webpack-69bfa6990bb9e155.js"
+      src="./static/chunks/webpack-69bfa6990bb9e155.js"
       defer=""
     ></script>
     <script
-      src="_next/static/chunks/framework-fc97f3f1282ce3ed.js"
+      src="./static/chunks/framework-fc97f3f1282ce3ed.js"
       defer=""
     ></script>
     <script
-      src="_next/static/chunks/main-551bef8982a15171.js"
+      src="./static/chunks/main-551bef8982a15171.js"
       defer=""
     ></script>
     <script
-      src="_next/static/chunks/pages/_app-b47602fd1d96eedd.js"
+      src="./static/chunks/pages/_app-b47602fd1d96eedd.js"
       defer=""
     ></script>
-    <script src="_next/static/chunks/90-8a801c682b7348c6.js" defer=""></script>
+    <script src="./static/chunks/90-8a801c682b7348c6.js" defer=""></script>
     <script
-      src="_next/static/chunks/pages/index-4c194e45222edb70.js"
-      defer=""
-    ></script>
-    <script
-      src="_next/static/gBqyTyftlcEgo_U07rOCR/_buildManifest.js"
+      src="./static/chunks/pages/index-4c194e45222edb70.js"
       defer=""
     ></script>
     <script
-      src="_next/static/gBqyTyftlcEgo_U07rOCR/_ssgManifest.js"
+      src="./static/gBqyTyftlcEgo_U07rOCR/_buildManifest.js"
       defer=""
     ></script>
     <script
-      src="_next/static/gBqyTyftlcEgo_U07rOCR/_middlewareManifest.js"
+      src="./static/gBqyTyftlcEgo_U07rOCR/_ssgManifest.js"
+      defer=""
+    ></script>
+    <script
+      src="./static/gBqyTyftlcEgo_U07rOCR/_middlewareManifest.js"
       defer=""
     ></script>
   </head>
@@ -79,14 +79,14 @@
               class="flex flex-col items-center justify-between gap-y-5 py-[20px] sm:flex-row sm:py-[30px]"
             >
               <img
-                src="_next/static/media/suWorldLogo.27a5e8af.svg"
+                src="./static/media/suWorldLogo.27a5e8af.svg"
                 width="200"
                 height="44"
                 alt="SuWorld logo"
               />
               <div class="flex items-center gap-5">
                 <img
-                  src="_next/static/media/phone-icon.4f217e72.svg"
+                  src="./static/media/phone-icon.4f217e72.svg"
                   width="24"
                   height="24"
                   alt="Phone icon"
@@ -140,11 +140,11 @@
               >
                 <img
                   class="mt-auto max-h-full object-contain xl:max-h-[85vh] 2xl:max-h-[90vh]"
-                  src="/image/welcome-people.png"
+                  src="./image/welcome-people.png"
                   sizes="(max-width: 600px) 600px, auto"
                   srcset="
-                    /image/welcome-people-small.png 600w,
-                    /image/welcome-people.png
+                    ./image/welcome-people-small.png 600w,
+                    ./image/welcome-people.png
                   "
                 />
               </div>
@@ -157,7 +157,7 @@
           >
             <div class="relative hidden pl-8 lg:block xl:pl-0">
               <img
-                src="/image/benefits-img.png"
+                src="./image/benefits-img.png"
                 width="592"
                 height="560"
                 alt="client photo"
@@ -167,7 +167,7 @@
               >
                 <div class="flex items-center gap-2.5">
                   <img
-                    src="_next/static/media/money-bag-icon.04b2bb79.svg"
+                    src="./static/media/money-bag-icon.04b2bb79.svg"
                     width="24"
                     height="24"
                   /><span
@@ -184,7 +184,7 @@
               >
                 <div class="flex items-center gap-2.5">
                   <img
-                    src="_next/static/media/money-bag-icon.04b2bb79.svg"
+                    src="./static/media/money-bag-icon.04b2bb79.svg"
                     width="24"
                     height="24"
                   /><span
@@ -201,7 +201,7 @@
               >
                 <div class="flex items-center gap-2.5">
                   <img
-                    src="_next/static/media/money-bag-icon.04b2bb79.svg"
+                    src="./static/media/money-bag-icon.04b2bb79.svg"
                     width="24"
                     height="24"
                   /><span
@@ -267,7 +267,7 @@
                 >
                 <div class="absolute top-5 right-5">
                   <img
-                    src="_next/static/media/keep-client-icon.82a5803c.svg"
+                    src="./static/media/keep-client-icon.82a5803c.svg"
                     width="56"
                     height="56"
                   />
@@ -285,7 +285,7 @@
                 >
                 <div class="absolute top-5 right-5">
                   <img
-                    src="_next/static/media/improve-client-base.40a2579a.svg"
+                    src="./static/media/improve-client-base.40a2579a.svg"
                     width="56"
                     height="56"
                   />
@@ -302,7 +302,7 @@
                 >
                 <div class="absolute top-5 right-5">
                   <img
-                    src="_next/static/media/cashback.82a9597a.svg"
+                    src="./static/media/cashback.82a9597a.svg"
                     width="56"
                     height="56"
                   />
@@ -388,11 +388,11 @@
             >
               <img
                 class="mt-auto object-contain lg:max-w-[80%] xl:max-w-max 2xl:max-w-[95%] 3xl:max-w-max"
-                src="/image/reasons-img.png"
+                src="./image/reasons-img.png"
                 sizes="(max-width: 600px) 600px, auto"
                 srcset="
-                  /image/reasons-img-small.png 600w,
-                  /image/reasons-img.png
+                  ./image/reasons-img-small.png 600w,
+                  ./image/reasons-img.png
                 "
               />
             </div>
@@ -416,9 +416,9 @@
             >
               <img
                 class="mt-auto object-contain lg:max-w-[80%] xl:max-w-max"
-                src="/image/inform-img.png"
+                src="./image/inform-img.png"
                 sizes="(max-width: 600px) 600px, auto"
-                srcset="/image/inform-img-small.png 600w, /image/inform-img.png"
+                srcset="./image/inform-img-small.png 600w, ./image/inform-img.png"
               />
             </div>
             <ul class="mt-4 flex max-w-[500px] flex-col gap-2.5 md:mt-8">
@@ -465,11 +465,11 @@
             >
               <img
                 class="mt-auto object-contain lg:max-w-[90%] xl:ml-auto xl:max-w-[75%] 2xl:max-w-[90%] 3xl:max-w-max"
-                src="/image/landing-img.png"
+                src="./image/landing-img.png"
                 sizes="(max-width: 1280px) 1280px, auto"
                 srcset="
-                  /image/landing-img-small.png 1280w,
-                  /image/landing-img.png
+                  ./image/landing-img-small.png 1280w,
+                  ./image/landing-img.png
                 "
               />
             </div>
@@ -506,11 +506,11 @@
             >
               <img
                 class="mt-auto object-contain lg:max-w-[80%] xl:max-w-max"
-                src="/image/client-base-img.png"
+                src="./image/client-base-img.png"
                 sizes="(max-width: 1024px) 1024px, auto"
                 srcset="
-                  /image/client-base-img-small.png 1024w,
-                  /image/client-base-img.png
+                  ./image/client-base-img-small.png 1024w,
+                  ./image/client-base-img.png
                 "
               />
             </div>
@@ -544,7 +544,7 @@
               <div class="relative hidden w-1/2 lg:flex">
                 <div class="absolute bottom-0 -left-14 flex">
                   <img
-                    src="/image/investment-img.png"
+                    src="./image/investment-img.png"
                     width="652"
                     height="746"
                     alt="client photo"
@@ -647,7 +647,7 @@
                 <div
                   class="relative flex h-[62px] w-[62px] xl:h-[76px] xl:w-[76px]"
                 >
-                  <img src="_next/static/media/commission-icon.a786d1e8.svg" />
+                  <img src="./static/media/commission-icon.a786d1e8.svg" />
                 </div>
                 <span
                   class="max-w-[390px] text-center text-s-16 leading-1.6 xl:text-s-20 xl:leading-1.5"
@@ -661,7 +661,7 @@
                 <div
                   class="relative flex h-[62px] w-[62px] xl:h-[76px] xl:w-[76px]"
                 >
-                  <img src="_next/static/media/chat-icon.5bec0851.svg" />
+                  <img src="./static/media/chat-icon.5bec0851.svg" />
                 </div>
                 <span
                   class="max-w-[390px] text-center text-s-16 leading-1.6 xl:text-s-20 xl:leading-1.5"
@@ -675,7 +675,7 @@
                 <div
                   class="relative flex h-[62px] w-[62px] xl:h-[76px] xl:w-[76px]"
                 >
-                  <img src="_next/static/media/no-limit-icon.ca527390.svg" />
+                  <img src="./static/media/no-limit-icon.ca527390.svg" />
                 </div>
                 <span
                   class="max-w-[390px] text-center text-s-16 leading-1.6 xl:text-s-20 xl:leading-1.5"
@@ -688,7 +688,7 @@
                 <div
                   class="relative flex h-[62px] w-[62px] xl:h-[76px] xl:w-[76px]"
                 >
-                  <img src="_next/static/media/multi-cart-icon.3e9ff6d9.svg" />
+                  <img src="./static/media/multi-cart-icon.3e9ff6d9.svg" />
                 </div>
                 <span
                   class="max-w-[390px] text-center text-s-16 leading-1.6 xl:text-s-20 xl:leading-1.5"
@@ -703,7 +703,7 @@
                   class="relative flex h-[62px] w-[62px] xl:h-[76px] xl:w-[76px]"
                 >
                   <img
-                    src="_next/static/media/security-payment-icon.cbef71e8.svg"
+                    src="./static/media/security-payment-icon.cbef71e8.svg"
                   />
                 </div>
                 <span
@@ -719,7 +719,7 @@
                   class="relative flex h-[62px] w-[62px] xl:h-[76px] xl:w-[76px]"
                 >
                   <img
-                    src="_next/static/media/monetization-icon.ca41a04f.svg"
+                    src="./static/media/monetization-icon.ca41a04f.svg"
                   />
                 </div>
                 <span
@@ -733,7 +733,7 @@
                 <div
                   class="relative flex h-[62px] w-[62px] xl:h-[76px] xl:w-[76px]"
                 >
-                  <img src="_next/static/media/wallet-icon.b934a97b.svg" />
+                  <img src="./static/media/wallet-icon.b934a97b.svg" />
                 </div>
                 <span
                   class="max-w-[390px] text-center text-s-16 leading-1.6 xl:text-s-20 xl:leading-1.5"
@@ -808,7 +808,7 @@
             >
               <img
                 class="mt-auto max-w-[75%] lg:max-w-[85%] xl:max-w-max"
-                src="/image/question-img.png"
+                src="./image/question-img.png"
               />
             </div>
           </section>
@@ -820,7 +820,7 @@
             class="container mx-auto flex h-full flex-col items-center px-4 text-white lg:flex-row lg:justify-between"
           >
             <img
-              src="_next/static/media/suworldLogoWhite.e1f7605b.svg"
+              src="./static/media/suworldLogoWhite.e1f7605b.svg"
               width="200"
               height="44"
               alt="SuWorld logo"
