--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       defer=""
     ></script>
     <script
-      src="./static/chunks/pages/_app-b47602fd1d96eedd.js"
+      src="static/chunks/pages/app-b47602fd1d96eedd.js"
       defer=""
     ></script>
     <script src="./static/chunks/90-8a801c682b7348c6.js" defer=""></script>
@@ -54,15 +54,15 @@
       defer=""
     ></script>
     <script
-      src="./static/gBqyTyftlcEgo_U07rOCR/_buildManifest.js"
+      src="static/gBqyTyftlcEgo_U07rOCR/buildManifest.js"
       defer=""
     ></script>
     <script
-      src="./static/gBqyTyftlcEgo_U07rOCR/_ssgManifest.js"
+      src="static/gBqyTyftlcEgo_U07rOCR/ssgManifest.js"
       defer=""
     ></script>
     <script
-      src="./static/gBqyTyftlcEgo_U07rOCR/_middlewareManifest.js"
+      src="static/gBqyTyftlcEgo_U07rOCR/middlewareManifest.js"
       defer=""
     ></script>
   </head>
